[package]
name    = "core_rs"
version = "0.1.0"
edition = "2021"

[lib]
name       = "core_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3       = { version = "0.28.3", features = ["extension-module"] }
scopeguard = "1.2"
windows    = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
strip     = true
